add config for github to DarkReader

--- a/Dark-Reader-Settings.json
+++ b/Dark-Reader-Settings.json
@@ -105,6 +105,33 @@
                 "darkColorScheme": "Default",
                 "immediateModify": false
             }
+        },
+        {
+            "url": [
+                "github.com"
+            ],
+            "theme": {
+                "mode": 0,
+                "brightness": 100,
+                "contrast": 100,
+                "grayscale": 0,
+                "sepia": 0,
+                "useFont": false,
+                "fontFamily": "IBM Plex Serif",
+                "textStroke": 0,
+                "engine": "dynamicTheme",
+                "stylesheet": "",
+                "darkSchemeBackgroundColor": "#181a1b",
+                "darkSchemeTextColor": "#e8e6e3",
+                "lightSchemeBackgroundColor": "#FBF0D9",
+                "lightSchemeTextColor": "#000000",
+                "scrollbarColor": "auto",
+                "selectionColor": "auto",
+                "styleSystemControls": false,
+                "lightColorScheme": "Default",
+                "darkColorScheme": "Default",
+                "immediateModify": false
+            }
         }
     ],
     "siteList": [
